2005-01-11  Paolo Maggi  <paolo@gnome.org>

	Based on a patch by Juerg Billeter <j@bitron.ch>
	
	* dialogs/gedit-preferences-dialog.c
	(bracket_matching_checkbutton_toggled) (setup_view_page)
	(get_preferences_dialog): added new "Highlight Matching Bracket" option

	* dialogs/gedit-preferences.glade2: ditto

	* gedit-document.c (gedit_document_init): ditto

	* gedit-prefs-manager-app.c (gedit_prefs_manager_app_init)
	(gedit_prefs_manager_bracket_matching_changed): ditto

	* gedit-prefs-manager.c: ditto

	* gedit-prefs-manager.h: ditto

2005-01-10 Naveen & Team < naveenchandranv@gmail.com >

	* Fixed bug #161998 (http://bugzilla.gnome.org/show_bug.cgi?id=161998).
	Save Confirmation dialog is now HIG compliant.
	The "Don't Save" button has been changed to "Close without Saving".

2005-01-10  Paolo Maggi  <paolo@gnome.org>

	* recent-files/egg-recent-model.c: sync to latest
	libegg.

2005-01-08  Paolo Maggi  <paolo@gnome.org>

	* dialogs/gedit-preferences-dialog.c
	(highlight_current_line_checkbutton_toggled) (setup_view_page)
	(get_preferences_dialog): added new "Highlight Current Line" option

	* dialogs/gedit-preferences.glade2: ditto

	* gedit-prefs-manager-app.c (gedit_prefs_manager_app_init)
	(gedit_prefs_manager_hl_current_line_changed): ditto

	* gedit-prefs-manager.c: ditto

	* gedit-prefs-manager.h: ditto

	* gedit-view.c (gedit_view_init): ditto

2005-01-07  Paolo Maggi  <paolo@gnome.org>

	* gedit-commands.c (gedit_cmd_help_about): replace "translator_credits" with
	"translator-credits" (as requested in bug #150106:Modules should use 
	"translator-credits" intead of "translator_credits"). Added comment for 
	translators.

2004-12-13  Paolo Maggi  <paolo@gnome.org>

	* dialogs/gedit-preferences.glade2: s/Tabs/Tab Stops and 
	s/Tabs width/Tab width  and added a comment for translators (fixes 
	bug #131419: l10n: Refer to tabulators as "tabulators", not "tabs".)

2004-12-13  Paolo Maggi  <paolo@gnome.org>
