@@ -1,5 +1,10 @@
 2005-01-11  Paolo Maggi  <paolo@gnome.org>
 
+	* recent-files/egg-recent-model.c (end_element_handler)
+	(text_handler): locally fixes bug #160531 (startup takes ages)
+
+2005-01-11  Paolo Maggi  <paolo@gnome.org>
+
 	Based on a patch by Juerg Billeter <j@bitron.ch>
 	
 	* dialogs/gedit-preferences-dialog.c
